reparacion de manera de subir fotos en el celular

--- a/templates/base.html
+++ b/templates/base.html
@@ -124,5 +124,6 @@
             });
         }
     </script>
+    <script src="{{ url_for('static', filename='upload_handler.js', v=now_timestamp) }}"></script>
 </body>
 </html>
